<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简繁家</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="designer">设计师</string>
    <string name="ower">业主</string>
    <string name="updated">更新于:</string>
    <string name="jianfanjia_net">http://www.jianfanjia.com</string>
    <string name="loading">正在加载中</string>
    <string name="submiting">正在提交中</string>
    <string name="no_data">暂无数据</string>
    
     <string name="main_refresh_updated1">刚刚更新</string>
    <string name="main_refresh_updated2">更新于%1$d分钟前</string>
    <string name="main_refresh_updated3">更新于%1$d小时前</string>
    <string name="main_refresh_updated4">已过期</string>
    <!-- main activity -->
    <string name="main_tab_name_darly">日记</string>
    <string name="main_tab_name_site">工地</string>
    <string name="main_tab_name_my">我的</string>
    <string name="main_title_example">简繁家</string>
    <string name="main_right_example">配置工地</string>
    <!-- main activity -->


    <!-- login_activity -->
    <string name="login">登录</string>
    <string name="enter">欢迎使用</string>
    <string name="loging">正在登录中</string>
    <string name="loding">正在加载中</string>
    <string name="comfirm">确  认</string>
    <string name="no">取  消 </string>
    <string name="ok">确     定</string>
    <string name="agree">同     意</string>
    <string name="refuse">拒     绝</string>
    <string name="hint_username">请输入手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">用户注册</string>
    <string name="loginByUser">用户登录</string>
    <string name="tip_please_input_username">请输入账号</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">用户名或密码错误</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_error_internet">网络异常</string>
    <string name="tip_internet_not">当前没有网络</string>
    <string name="hint_update_password">请输入重置密码</string>
    <string name="load_failture">解析异常</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failture">提交失败</string>
    <!-- login_activity -->


    <!-- register_activity -->
    <string name="next">下一步</string>
    <string name="last">上一步</string>
    <string name="get_verification">获取验证码</string>
    <string name="hint_verification">请输入验证码</string>
    <string name="hint_inputpsw_two">请再次输入密码</string>
    <string name="hint_reset_psw">请输入重置密码</string>
    <string name="confirm">确认</string>
    <string name="finish">完成</string>
    <string name="commit">提交</string>
    <string name="choose_role">选择角色</string>
    <string name="input_phone">请输入你的手机号</string>
    <string name="verifica_phone">验证手机号</string>
    <string name="verification_code_sended">验证码已发送到：</string>
    <string name="register_failure">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="update_psw_success">修改密码成功</string>
    <!-- register_activity -->


    <!-- site_fragment -->
    <string name="site_example_node_name">面板数量核算</string>
    <string name="site_example_node_check">对比验收</string>
    <string name="site_example_node_time">2015-8-1 9:30</string>
    <string name="site_example_node_delay">预计改期</string>
    <string name="site_example_node_working">正在施工</string>
    <string name="site_example_node_finish">已完工</string>
    <string name="site_example_node_not_start">未开工</string>
    <string name="site_example_node_confirm_finish">确认完工</string>
    <string name="site_example_node_upload_picture">上传照片</string>
    <string name="site_example_node_assess">评价</string>
    <string name="more">更多</string>
    <string name="retract">收起</string>

    <!-- my_site information -->
    <string name="my_current_site">当前工地</string>
    <string name="my_site_city">所在城市</string>
    <string name="my_site_city_example">湖北武汉洪山区</string>
    <string name="my_site_villagename">小区名称</string>
    <string name="my_site_villagename_example">中建康城二期</string>
    <string name="my_site_housestyle">户型</string>
    <string name="my_site_housestyle_example">三室一厅</string>
    <string name="my_site_housesize">装修面积大小（㎡）</string>
    <string name="my_site_housesize_example">110㎡</string>
    <string name="my_site_lovestyle">风格喜好</string>
    <string name="my_site_lovestyle_example">现代简约</string>
    <string name="my_site_decoratestyle">装修类型</string>
    <string name="my_site_decoratestyle_example">半包</string>
    <string name="my_site_decoratebudget">装修预算（万元）</string>
    <string name="my_site_decoratebudget_example">20w</string>
    <string name="my_site_startdate">开工日期</string>
    <string name="my_site_startdate_example">2015-8-17</string>
    <string name="my_site_totaldate">总工期（天）</string>
    <string name="my_site_totaldate_example">60天</string>
    <string name="current_process">当前工地</string>

    <!-- my_designer_information -->
    <string name="my_designer_name">Jeff Zhang</string>
    <string name="my_designer_product">作品</string>
    <string name="my_designer_product_sum">9999</string>
    <string name="my_designer_appointment">预约</string>
    <string name="my_designer_appointment_sum">20</string>
    <string name="work_city">服务城市:</string>
    <string name="designer_budget">设计费:</string>
    <string name="good_at_style">擅长风格:</string>
    <string name="call_designer">联系设计师</string>

    <!-- my_fragment -->
    <string name="fisrt_page">首页</string>
    <string name="my_designer">我的设计师</string>
    <string name="my_decoration_site">我的工地</string>
    <string name="my_diary">我的日记</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_setting">设置</string>
    <string name="tip">提醒</string>
    <string name="my_tip">我的提醒</string>
    <string name="my_help">帮助</string>
    <string name="my_ower">我的业主</string>
    <string name="owner_detail">业主详情</string>
    <string name="designer_detail">设计师详情</string>
    <string name="my_site">我的工地</string>
    <string name="my_example_name">Jeff</string>
    <string name="my_example_account">账号：12244444</string>
    <string name="message_push">消息推送</string>
    <string name="share">分享给小伙伴</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_example">1.0</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cache_size">110M</string>
    <string name="feedback">用户反馈</string>
    <string name="logout">退出登录</string>
    <string name="list_item_comment_pubtime_example">30分钟前</string>
    <string name="add_comment">添加评论</string>
    <string name="add_feedback">请添加您想说的内容</string>
    <string name="userinfo">个人信息</string>
    <string name="comment">评论</string>
    <string name="check">阶段验收</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="confirm_upload">确认上传</string>
    <string name="confirm_tip">提醒业主进行验收</string>
    <string name="confirm_done">确认验收</string>
    <string name="caigouText">采购提醒</string>
    <string name="fukuanText">付款提醒</string>
    <string name="yanqiText">改期提醒</string>
    <string name="yanshouText">验收提醒</string>
    <string name="list_item_caigou_example">您即将进入下一轮建材购买阶段,需要购买的是</string>
    <string name="list_item_fukuan_example">您即将进入下一轮付款环节，简繁家工作人员将会和您联系</string>
    <string name="list_item_yanqi_example">对方已申请改期验收至</string>

    <!-- activity_upload_pic -->
    <string name="upload_pic">上传照片</string>
    <string name="show_pic">示范照片</string>
    <string name="edit">编辑</string>
    <string name="confirm_check">确认验收</string>
    <!-- activity_upload_pic -->


    <!-- activity owner detail -->
    <string name="owner_detail_city">所在城市：</string>
    <string name="owner_detail_cell">所在小区：</string>
    <string name="owner_detail_site">工地地址：</string>
    <string name="owner_detail_housestyle">装修户型：</string>
    <string name="owner_detail_decoratearea">装修面积（㎡）：</string>
    <string name="owner_detail_lovestyle">风格喜好：</string>
    <string name="owner_detail_decoratestyle">装修类型：</string>
    <string name="owner_detail_decoratebudget">装修预算（万元）：</string>
    <string name="owner_detail_startdate">开工日期：</string>
    <string name="owner_detail_totaldate">总工期（天）：</string>
    <!-- activity owner detail -->


    <!-- activity userinfo -->
    <string name="user_head">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_phone">手机号</string>
    <string name="user_address">所在地</string>
    <string name="user_home">居住地址</string>
    <string name="not_edit">未填写</string>
    <!-- activity userinfo -->


    <!-- activity_about -->
    <string name="about">关于我们</string>
    <string name="about_my">关于简繁家</string>
    <string name="about_content">我的设计师专单平台</string>
    <string name="about_version">版本号：1.0</string>
    <string name="company">武汉家易装科技有限公司</string>
    <string name="compant_net">Copyright © 2015-2025 jianfanjia.com</string>
    <!-- activity_about -->


    <!-- activity_share -->
    <string name="share_tip">长按二维码保存</string>
    <string name="save_image_success">图片已保存至相册中</string>
    <string name="save_image_failure">图片保存失败</string>
    <string name="share_title">分享</string>
    <!-- activity_share -->

    <string name="comment_success">评论成功</string>
    <string name="open_camera">拍照</string>
    <string name="open_album">从相册中选择</string>

    <!-- edit activity -->
    <string name="input_name">请输入昵称</string>
    <string name="input_home">请输入家庭地址</string>
    <!-- edit activity -->

</resources>