<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="282dp"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ower_sliding_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_cover_sidebar" />

    <LinearLayout
        android:id="@+id/ower_sliding_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ower_sliding_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_home_checked1" />

        <TextView
            android:id="@+id/ower_sliding_name"
            style="@style/site_listview_item_text_style_middle"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/my_example_name"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/ower_sliding_account"
            style="@style/site_listview_item_text_style_small"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/my_example_account"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/ower_sliding_fisrtpage"
            style="@style/site_listview_item_text_style_big"
            android:layout_marginTop="@dimen/space_32"
            android:text="@string/fisrt_page"
            android:textColor="@color/font_white" />

            <TextView
                android:id="@+id/ower_sliding_tip"
                style="@style/site_listview_item_text_style_big"
                android:text="@string/my_tip"
                android:textColor="@color/font_white"
                android:layout_marginTop="@dimen/space_16"
                />

        <TextView
            android:id="@+id/ower_sliding_designer"
            style="@style/site_listview_item_text_style_big"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/designer"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/ower_sliding_site"
            style="@style/site_listview_item_text_style_big"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/my_decoration_site"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/ower_sliding_setting"
            style="@style/site_listview_item_text_style_big"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/my_setting"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/ower_sliding_help"
            style="@style/site_listview_item_text_style_big"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/my_help"
            android:textColor="@color/font_white" />
    </LinearLayout>

</RelativeLayout>