<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout_bg" >

    <RelativeLayout
        android:id="@+id/ower_site_head_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@color/head_layout_bg" >

        <ImageView
            android:id="@+id/ower_site_head"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_8"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_home_default_user" />

        <TextView
            android:id="@+id/ower_site_title"
            style="@style/site_listview_item_text_style_title"
            android:layout_centerInParent="true"
            android:text="@string/my_site"
            android:textColor="@color/main_color_black" />

        <View
            style="@style/divier_line"
            android:layout_alignParentBottom="true"
            android:background="@color/horzontal_line_color" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ower_site_head_layout"
        android:layout_marginTop="@dimen/space_8" >

        <LinearLayout
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_city_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    android:id="@+id/my_site_city"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_city_example"
                    android:textColor="@color/main_color_grey" />

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_city"
                    android:textColor="@color/main_color_black" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_villagename_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_villagename"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_villagename"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_villagename_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_housestyle_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_housestyle"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_housestyle"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_housestyle_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_decorationArea_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_housesize"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_derationArea"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_housesize_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_lovestyle_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_lovestyle"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_lovestyle"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_lovestyle_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_decorationstyle_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_decoratestyle"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_decorationstyle"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_decoratestyle_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_decorationbudget_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_decoratebudget"
                    android:textColor="@color/main_color_black" />

                <TextView
                    android:id="@+id/my_site_decorationbudget"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_decoratebudget_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <View
                style="@style/divier_line"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:id="@+id/my_startdate_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_startdate"
                    android:textColor="@color/main_color_black" />

                <ImageView
                    android:id="@+id/startdate_select_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/my_site_startdate"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/startdate_select_goto"
                    android:text="@string/my_site_startdate_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/my_totaldate_layout"
                style="@style/my_item_layout_style" >

                <TextView
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_site_totaldate"
                    android:textColor="@color/main_color_black" />

                <ImageView
                    android:id="@+id/totaldate_select_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/my_site_totaldate"
                    style="@style/site_listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/totaldate_select_goto"
                    android:text="@string/my_site_totaldate_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <TextView
                android:id="@+id/my_site_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_48"
                android:layout_marginLeft="@dimen/space_24"
                android:layout_marginRight="@dimen/space_24"
                android:layout_marginTop="@dimen/space_24"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/confirm"
                android:textSize="17sp"
                android:textColor="@color/font_white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>