<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_loading" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="@dimen/space_48"
        android:layout_marginRight="@dimen/space_48"
        android:orientation="vertical" >

        <LinearLayout style="@style/item_input_container" >

            <EditText
                android:id="@+id/et_username"
                style="@style/item_input_edittext"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/item_input_container"
            android:layout_marginTop="@dimen/space_16" >

            <EditText
                android:id="@+id/et_password"
                style="@style/item_input_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:layout_marginTop="@dimen/space_12" >

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:textColor="@color/font_reg_color1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register"
                android:textColor="@color/font_reg_color1"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/button_login_style"
            android:layout_marginTop="@dimen/space_24"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>