<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout_bg" >
    
    <include layout="@layout/common_head_layout"
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_top"
        android:layout_marginTop="@dimen/space_8"
        android:orientation="vertical"
        android:padding="@dimen/space_16"
        >

        <LinearLayout style="@style/item_input_container"
            >

            <EditText
                android:id="@+id/et_username"
                style="@style/item_input_edittext"
                android:layout_marginLeft="@dimen/space_8"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/item_input_container"
            >

            <EditText
                android:id="@+id/et_verification"
                style="@style/item_input_edittext"
                android:layout_marginLeft="@dimen/space_8"
                android:hint="@string/hint_verification"
                android:inputType="textPassword" />
            
             <TextView
                android:id="@+id/verification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_marginRight="8dp"
                android:textColor="@color/font_red"
                android:text="@string/get_verification"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/button_login_style"
            android:layout_marginTop="30dp"
            android:text="@string/next" />
    </LinearLayout>
    

</RelativeLayout>
